<resources>
    <string name="app_name">Health</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pat_suche">Patienten</string>
    <string name="title_activity_tp_erstellen">Trainsplan erstellen</string>
    <string name="editText_errorMessage">Fehler</string>


    <string name="cab_delete">Einträge löschen</string>

    <string name="cab_change">Eintrag ändern</string>
    <string name="cab_checked_string">ausgewählt</string>

    <string name="dialog_title">Listeneintrag ändern</string>
    <string name="dialog_title_vorname">Vorname:</string>
    <string name="dialog_title_nachname">Nachname:</string>
    <string name="dialog_title_a">A:</string>
    <string name="dialog_title_b">B:</string>
    <string name="dialog_title_c">C:</string>

    <string name="dialog_button_positive">Ändern</string>
    <string name="dialog_button_negative">Abbrechen</string>
    <string name="title_activity_search">Patient</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>

    editText_errorMessage
</resources>
